--- a/src/01-pseudo-classes/01-listas.html
+++ b/src/01-pseudo-classes/01-listas.html
@@ -9,15 +9,15 @@
   <body>
     <h1>Listas</h1>
     <hr />
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-      <li>Item 3</li>
-      <li>Item 4</li>
+    <ul class="list-decimal list-inside">
+      <li class="first:mt-4">Item 1</li>
+      <li class="first:mt-4">Item 2</li>
+      <li class="first:mt-4">Item 3</li>
+      <li class="first:mt-4 last:mb-4">Item 4</li>
     </ul>
     <footer>
       <p>Soy el footer</p>
-      <a href="02-tablas.html">Siguiente Tablas</a>
+      <a class="text-blue-500 hover:underline cursor-pointer tex" href="02-tablas.html">Siguiente Tablas</a>
     </footer>
   </body>
 </html>
