--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1 class="text-2xl font-bold text-blue-400 underline">Hola Mundo</h1>
+
+    <a 
+    class="underline text-blue-500 hover:text-blue-800" 
+    href="./01-pseudo-classes/01-listas.html">Listas HTML</a>
 </body>
 </html>
