agregando ejercicio de hermanos

--- a/src/01-pseudo-classes/05-grupos.html
+++ b/src/01-pseudo-classes/05-grupos.html
@@ -12,13 +12,14 @@
     <hr />
 
     <div
-      class="mt-10 rounded-md border bg-slate-800 p-6 text-white transition-colors hover:bg-sky-400"
+      class="group mt-10 rounded-md border bg-slate-800 p-6 text-white transition-colors hover:bg-sky-400"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
         width="48"
         height="48"
         viewBox="0 0 16 16"
+        class="text-sky-400"
       >
         <path
           fill="currentColor"
