--- a/src/01-pseudo-classes/06-hermanos.html
+++ b/src/01-pseudo-classes/06-hermanos.html
@@ -28,15 +28,15 @@
               type="checkbox"
               id="task-1"
               checked
-              class="relative h-6 w-6 cursor-pointer appearance-none rounded border-2 border-slate-600 checked:after:absolute checked:after:top-1/2 checked:after:left-1/2 checked:after:-translate-x-1/2 checked:after:-translate-y-1/2 checked:after:text-sm checked:after:text-white checked:after:content-['✓']"
+              class="peer relative h-6 w-6 cursor-pointer appearance-none rounded border-2 border-slate-600 checked:after:absolute checked:after:top-1/2 checked:after:left-1/2 checked:after:-translate-x-1/2 checked:after:-translate-y-1/2 checked:after:text-sm checked:after:text-white checked:after:content-['✓']"
             />
-            <span class="flex-1 transition-all duration-300 ease-in-out">
+            <span class="flex-1 peer-checked:line-through transition-all duration-300 ease-in-out">
               Crear una lista de tareas
             </span>
           </label>
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="hidden h-5 w-5 text-gray-500 peer-has-checked:block"
+            class="peer h-5 w-5 text-gray-500 peer-has-checked:block"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -57,9 +57,9 @@
             <input
               type="checkbox"
               id="task-2"
-              class="relative h-6 w-6 cursor-pointer appearance-none rounded border-2 border-slate-600 checked:after:absolute checked:after:top-1/2 checked:after:left-1/2 checked:after:-translate-x-1/2 checked:after:-translate-y-1/2 checked:after:text-sm checked:after:text-white checked:after:content-['✓']"
+              class="peer relative h-6 w-6 cursor-pointer appearance-none rounded border-2 border-slate-600 checked:after:absolute checked:after:top-1/2 checked:after:left-1/2 checked:after:-translate-x-1/2 checked:after:-translate-y-1/2 checked:after:text-sm checked:after:text-white checked:after:content-['✓']"
             />
-            <span class="flex-1"> Aprender sobre selectores de hermanos </span>
+            <span class="flex-1 peer-checked:line-through"> Aprender sobre selectores de hermanos </span>
           </label>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -84,9 +84,9 @@
             <input
               type="checkbox"
               id="task-3"
-              class="relative h-6 w-6 cursor-pointer appearance-none rounded border-2 border-slate-600 checked:after:absolute checked:after:top-1/2 checked:after:left-1/2 checked:after:-translate-x-1/2 checked:after:-translate-y-1/2 checked:after:text-sm checked:after:text-white checked:after:content-['✓']"
+              class="peer relative h-6 w-6 cursor-pointer appearance-none rounded border-2 border-slate-600 checked:after:absolute checked:after:top-1/2 checked:after:left-1/2 checked:after:-translate-x-1/2 checked:after:-translate-y-1/2 checked:after:text-sm checked:after:text-white checked:after:content-['✓']"
             />
-            <span class="flex-1"> Compartir mi lista con amigos </span>
+            <span class="flex-1 peer-checked:line-through"> Compartir mi lista con amigos </span>
           </label>
           <svg
             xmlns="http://www.w3.org/2000/svg"
