--- a/src/01-pseudo-classes/08-grupos-implicitos.html
+++ b/src/01-pseudo-classes/08-grupos-implicitos.html
@@ -36,13 +36,13 @@
           </p>
           <div
             tabindex="0"
-            class="cursor-pointer rounded-lg bg-slate-800 p-4 ring-pink-500 transition outline-none"
+            class="group cursor-pointer rounded-lg bg-slate-800 p-4 ring-pink-500 transition outline-none focus:ring-2"
           >
             <p class="mb-2 text-sm text-slate-300">
               Haz foco (tab o click) en esta caja para ver el efecto:
             </p>
             <div
-              class="rounded bg-pink-500 p-3 text-white opacity-30 transition-opacity"
+              class="rounded bg-pink-500 p-3 text-white opacity-30 transition-opacity group-focus:opacity-100"
             >
               <span class="font-semibold">group-focus:</span> ¡Ahora me ves
               claramente!
@@ -59,13 +59,13 @@
           </p>
           <div
             tabindex="0"
-            class="cursor-pointer rounded-lg bg-slate-800 p-4 ring-pink-500 transition outline-none"
+            class="cursor-pointer rounded-lg bg-slate-800 p-4 ring-pink-500 transition outline-none focus:ring-2"
           >
             <p class="mb-2 text-sm text-slate-300">
               Haz foco (tab o click) en esta caja para ver el efecto:
             </p>
             <div
-              class="rounded bg-pink-500 p-3 text-white opacity-30 transition-opacity"
+              class="rounded bg-pink-500 p-3 text-white opacity-30 transition-opacity in-focus:opacity-100"
             >
               <span class="font-semibold">in-focus:</span> ¡Yo no necesito
               class="group"!
