--- a/src/01-pseudo-classes/09-diferenciando-peers.html
+++ b/src/01-pseudo-classes/09-diferenciando-peers.html
@@ -33,5 +33,8 @@
         Your post will be publicly visible on your site.
       </div>
     </fieldset>
+
+    <a class="underline hover:text-slate-500" href="../02-temas/01-responsivo.html">Click para la siguiente seccion</a>
+
   </body>
 </html>
